--- a/server/pom.xml
+++ b/server/pom.xml
@@ -17,6 +17,12 @@
             <version>5.6.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.geekbrains</groupId>
+            <artifactId>common</artifactId>
+            <version>1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
