--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>cloud2</artifactId>
     <packaging>pom</packaging>
     <version>1</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
     <modules>
         <module>server</module>
         <module>client</module>
