--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /client/src/ru.valerych.cloud2.client.main/resources/Cloud2Files/
 /server/src/test/storage/
 /server/src/test/sfiles-test/
+cloud2client.settings
